theme/css/style.css
/* ... */
.purple_feature .right_side_feature:hover .media .media-body h4 {
  color: #a640d0;
}

.left_side_feature {
  margin-bottom: 70px;
}

.left_side_feature .media .media-body h4 {
  text-align: right;
  font-size: 18px;
  font-family: "Montserrat", sans-serif;
  font-weight: bold;
  color: #222222;
  -webkit-transition: all 400ms linear 0s;
  -o-transition: all 400ms linear 0s;
  transition: all 400ms linear 0s;
  padding-bottom: 20px;
}

.left_side_feature .media .media-body p {
  text-align: right;
  font-size: 16px;
  line-height: 28px;
  font-family: "Lato", sans-serif;
  color: #696969;
}

.left_side_feature .media .media-right {
  padding-left: 35px;
}

.left_side_feature .media .media-right i {
  font-size: 48px;
  color: #f8395d;
}

.left_side_feature:last-child {
  margin-bottom: 0px;
}

.left_side_feature:first-child {
  margin-top: 75px;
}

.left_side_feature:hover .media .media-body h4 {
  color: #f8395d;
}

.right_side_feature {
  margin-bottom: 70px;
}

.right_side_feature .media .media-body h4 {
  font-size: 18px;
  font-family: "Montserrat", sans-serif;
  font-weight: bold;
  color: #222222;
  -webkit-transition: all 400ms linear 0s;
  -o-transition: all 400ms linear 0s;
  transition: all 400ms linear 0s;
  padding-bottom: 20px;
}

.right_side_feature .media .media-body p {
  font-size: 16px;
  line-height: 28px;
  font-family: "Lato", sans-serif;
  color: #696969;
}

.right_side_feature .media .media-left {
  padding-right: 35px;
}

.right_side_feature .media .media-left i {
  font-size: 48px;
  color: #f8395d;
}

.right_side_feature:last-child {
  margin-bottom: 0px;
}

.right_side_feature:first-child {
  margin-top: 75px;
}

.right_side_feature:hover .media .media-body h4 {
  color: #f8395d;
}

.feature_mobile {
  text-align: center;
  position: relative;
}

.feature_mobile img {
  max-width: 100%;
}

.feature_mobile .feature_mobile_slider {
  height: 438px;
  width: 246px;
  position: absolute;
  left: 49.6%;
  top: 49.8%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

/* End Feature area css
============================================================================================ */
/* Works area css
============================================================================================ */
.works_area {
  padding: 100px 0px;
}

.works_area .works_left_img {
  text-align: center;
}

.works_area .works_left_img img {
  max-width: 100%;
  height: 41.5rem;
}

.works_area .works_right_content {
  padding-top: 45px;
}

.works_area .works_right_content p {
  font-size: 16px;
  line-height: 28px;
  font-family: "Lato", sans-serif;
  color: #696969;
  padding-top: 40px;
  padding-bottom: 50px;
}

.works_area .works_right_content a img {
  max-width: 100%;
}

.works_area .works_right_content a + a {
  padding-left: 16px;
}

/* End Works area css
============================================================================================ */
/* Screenshot area css
============================================================================================ */
.screenshot_area {
  background: #f1f1f1;
  padding: 100px 0px;
}

.screenshot_inner {
  position: relative;
  z-index: 2;
}

.screenshot_inner:before {
  content: "";
  position: absolute;
  left: 49.75%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  top: 0px;
  z-index: 999;
  background: url(../img/screenshot/screenshot-shap.png) no-repeat scroll center center;
  width: 334px;
  height: 684px;
  z-index: 2;
}

.screenshot_inner .screenshot_slider {
  height: 684px;
  position: relative;
  top: 83px;
}

.screenshot_inner .screenshot_slider .item {
  text-align: center;
}

.screenshot_inner .screenshot_slider .item img {
  width: 300px;
  margin: auto;
  height: 478px;
}

/* End Screenshot area css
============================================================================================ */
/* Benefits area css
============================================================================================ */
.our_benefits_area {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.our_benefits_area .our_benefits_inner {
  width: 100%;
  overflow: hidden;
}

.our_benefits_area .our_benefits_inner .benefits_left {
  width: 50%;
  overflow: hidden;
  float: left;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  vertical-align: middle;
}

.our_benefits_area .our_benefits_inner .benefits_left img {
  max-width: 100%;
}

.our_benefits_area .our_benefits_inner .benefits_left .benefits_content {
  max-width: 555px;
  margin: auto;
}

.our_benefits_area .our_benefits_inner .benefits_left .benefits_content p {
  font-size: 16px;
  line-height: 28px;
  color: #696969;
  font-family: "Lato", sans-serif;
  padding-top: 40px;
}

.our_benefits_area .our_benefits_inner .benefits_left .benefits_content ul {
  padding-left: 10px;
  padding-top: 30px;
}

.our_benefits_area .our_benefits_inner .benefits_left .benefits_content ul li a {
  font-size: 16px;
  line-height: 28px;
  color: #696969;
  font-family: "Lato", sans-serif;
  -webkit-transition: all 400ms linear 0s;
  -o-transition: all 400ms linear 0s;
  transition: all 400ms linear 0s;
}

.our_benefits_area .our_benefits_inner .benefits_left .benefits_content ul li a i {
  font-weight: normal;
  font-size: 12px;
  position: relative;
  left: -10px;
  color: #f8395d;
}

.our_benefits_area .our_benefits_inner .benefits_left .benefits_content ul li:hover a {
  color: #f8395d;
}
/* ... */

